Added APIs for group variables and chaos config
